--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-icons": "^5.5.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^7.5.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.6",
