--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.6.2",
     "boxicons": "^2.1.4",
     "jquery": "^3.3.1",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.14.7",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-owl-carousel": "^2.3.3",
