--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "axios": "^1.9.0",
     "bootstrap": "^4.6.2",
     "boxicons": "^2.1.4",
+    "i18next": "^25.2.1",
     "jquery": "^3.3.1",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.14.7",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^7.5.0",
